--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/test.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,10 @@
     "less": "^2.5.1",
     "minimist": "^1.1.1",
     "promisify-node": "^0.1.5"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "supertest": "^1.0.1"
   },
   "bin": {
     "eider": "./bin/eider.js"
