--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eider",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "like http-server, only with Jade templates, browserify and LESS preprocessing",
   "main": "index.js",
   "directories": {
@@ -40,6 +40,7 @@
     "promisify-node": "^0.1.5"
   },
   "devDependencies": {
+    "jshint": "^2.8.0",
     "mocha": "^2.2.5",
     "supertest": "^1.0.1"
   },
